<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <RadioButton
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_btn_1"
        android:layout_weight="1"
        android:checked="true"
        android:onClick="onRadioButtonClicked"
        android:textColor="#ff1a8c"/>

    <RadioButton
        android:id="@+id/tipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_btn_2"
        android:layout_weight="1"
        android:onClick="onRadioButtonClicked"
        android:textColor="#ff1a8c"/>

    <RadioButton
        android:id="@+id/totalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_btn_3"
        android:onClick="onRadioButtonClicked"
        android:textColor="#ff1a8c"/>

</RadioGroup>