<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:padding="@dimen/nice_padding" >

    <EditText
        android:id="@+id/amountTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff1a8c"
        android:hint="ENTER AMOUNT"
        android:padding="@dimen/nice_padding"
        android:inputType="numberDecimal"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:ems="10"
        android:maxLength="6"
        android:layout_marginBottom="@dimen/nice_margin" />

    <TextView
        android:id="@+id/roundValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ROUND"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="1"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/small_margin"/>

    <include layout="@layout/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/nice_margin"/>

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="2" />

    <SeekBar
        android:id="@+id/percentSeekbar"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:max="30"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/nicer_margin"
        android:progress="15" />

    <TextView
        android:id="@+id/labelSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSpinner"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_row="3"/>

    <Spinner
        android:id="@+id/spinnerSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginBottom="@dimen/nice_margin" />

    <TextView
        android:id="@+id/tip_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TIP"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="4" />

    <TextView
        android:id="@+id/tipAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginBottom="@dimen/nice_margin"
        android:background="@drawable/color_bg"
        android:padding="@dimen/nice_padding"
        android:text="@string/dollarAmount"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/totalamount_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TOTAL"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="5" />

    <TextView
        android:id="@+id/totalAmountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/color_bg"
        android:padding="@dimen/nice_padding"
        android:text="@string/dollarAmount"
        android:layout_marginStart="@dimen/start_margin"
        android:textAlignment="center"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_row="5"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/nice_margin" />

    <TextView
        android:id="@+id/ppTotalTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EACH"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="6" />

    <TextView
        android:id="@+id/ppTotalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginBottom="@dimen/nice_margin"
        android:background="@drawable/color_bg"
        android:padding="@dimen/nice_padding"
        android:text="@string/dollarAmount"
        android:textAlignment="center" />

</GridLayout>